# what_is_the_media_saying

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  g1.py  pyproject.toml  pyrightconfig.json  scrapy.cfg  start-elastic-stack.sh
tests/: test_what_is_the_media_saying.py
witms/: items.py  loaders.py  middlewares.py  pipelines.py  settings.py
witms/scripts/: create_index.py  index-settings.json  post-processing.py  sections.csv
witms/spiders/: bbc.py  buzzfeed.py  cbs.py  cnn.py  foxnews.py  guardian.py  huffpost.py  nytimes.py  rt.py  sun.py  time.py  washingtonpost.py  wp.py
witms/utils/: text_cleaning.py
